# lnq-shortr

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  LICENSE  Makefile  README.md  database.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  sample.env.dev  sample.env.prod  sample.env.prod-db
app/: Dockerfile  Dockerfile.prod  pyproject.toml
app/landing/: admin.py  forms.py  models.py  urls.py  views.py
app/landing/migrations/: 0001_initial.py
app/static/: sticky-footer.css
app/templates/: base.html
app/templates/landing/: about.html  footer.html  home.html  nav.html  table.html
app/web/: settings.py  urls.py
backend/: Dockerfile  create-db.py  main.py  pyproject.toml
backend/src/: __init__.py  api.py  models.py  routes.py
backend/src/controllers/: __init__.py  aggregation.py  auth.py  quota.py  url.py  user.py
backend/src/core/: hash.py
backend/src/models/: __init__.py  quota.py  url.py  user.py
backend/src/services/: __init__.py  quota.py  url.py  user.py
backend/src/utils/: auth.py
backend/url-shortr/: main.py
backend/url-shortr/src/: logger.py
frontend/: next.config.js  package.json
frontend/components/: About.tsx  AccessToken.tsx  Feature.tsx  Footer.tsx  Header.tsx  Hero.tsx  Login.tsx  accessToken.tsx
frontend/components/Common/: SignInBtn.tsx  SignOutBtn.tsx
frontend/components/Dashboard/: InputBox.tsx  Layout.tsx  Sidebar.tsx  Table.tsx
frontend/components/Landing/: Features.tsx  Fin.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Pricing.tsx
frontend/pages/: Dashboard.tsx  _app.tsx  account.tsx  dashboard.tsx  faq.tsx  index.tsx  index2.tsx  privacy.tsx  profile.tsx  tos.tsx
frontend/pages/api/: restricted.ts  token.ts  urls.ts
frontend/pages/api/auth/: [...nextauth].ts
frontend/services/: msal.ts
frontend/styles/: Home.module.css  header.css
frontend/utils/: index.ts
nginx/: nginx.conf
notebook/: Collision test.ipynb
src/: api.py  hash.py  models.py  routes.py
url-resolver/: Dockerfile  go.mod  main.go
url-resolver/src/: go.mod  main.go
web/: Dockerfile  entrypoint.sh  pyproject.toml  readme.md
web/landing/: __init__.py  admin.py  form.py  models.py  urls.py  views.py
web/landing/migrations/: 0001_initial.py
web/landing/templates/: base.html  home.html
web/landing/templates/components/: cta.html  footer.html  navbar.html  shorten_url.html  table.html
web/landing/templates/components/landing/: hero.html
web/landing/templates/pages/: home.html  privacy.html  signin.html  tos.html
web/static/css/: signinbtn.css
web/web/: settings.py  urls.py
