[tool.poetry]
name = "url-shortner"
version = "0.1.0"
description = "URL Shortener service"
authors = ["Nikhil Akki <17634231+nikhilakki@users.noreply.github.com >"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
pydantic = {extras = ["dotenv"], version = "^1.10.1"}
nanoid = "^2.0.0"
pickleDB = "^0.9.2"
fastapi-azure-auth = "^3.5.0"
databases = "^0.6.1"
SQLAlchemy = "^1.4.40"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylama = "^8.4.1"
bandit = "^1.7.4"
jupyterlab = "^3.4.5"
jupyter = "^1.0.0"
importlib-metadata = "^4.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
