[tool.poetry]
name = "lnq-web"
version = "0.1.0"
description = "Web interface of lnqshortr.com"
authors = ["Nikhil Akki"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
django-allauth = "^0.51.0"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.7"
nanoid = "^2.0.0"
django-environ = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylama = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
